--- a/skills/index.html
+++ b/skills/index.html
@@ -5,7 +5,7 @@ hero_image: https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:low/v154668
 hero_image_fallback: https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:low/v1546681002/devstar/hero-services.png
 hero_title: Skills
 hero_layout: default
-hero_text: <div class="hero__subtitle">4 years of experience in Frontend Development, Magento Development, Design and more.</div>
+hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writing, design and more.</div>
 ---
 
 <main class="main">
@@ -34,7 +34,7 @@ hero_text: <div class="hero__subtitle">4 years of experience in Frontend Develop
           <div class="featuredList__icon featuredList__icon--default">
             <span class="icon icon__brand--html5"></span>
           </div>
-          <h3 class="title--secondary  featuredList__title">
+          <h3 class="title--secondary featuredList__title">
             Static Website Development
           </h3>
           <div class="featuredList__text">
@@ -48,7 +48,7 @@ hero_text: <div class="hero__subtitle">4 years of experience in Frontend Develop
           <div class="featuredList__icon featuredList__icon--default">
             <span class="icon icon__brand--css3"></span>
           </div>
-          <h3 class="title--secondary  featuredList__title">
+          <h3 class="title--secondary featuredList__title">
             Frontend Development
           </h3>
           <div class="featuredList__text">
@@ -61,7 +61,7 @@ hero_text: <div class="hero__subtitle">4 years of experience in Frontend Develop
           <div class="featuredList__icon featuredList__icon--default">
             <span class="icon icon__brand--react"></span>
           </div>
-          <h3 class="title--secondary  featuredList__title">
+          <h3 class="title--secondary featuredList__title">
             React Development
           </h3>
           <div class="featuredList__text">
@@ -115,7 +115,7 @@ hero_text: <div class="hero__subtitle">4 years of experience in Frontend Develop
           <div class="featuredList__icon featuredList__icon--default">
             <span class="icon icon__file"></span>
           </div>
-          <h3 class="title--secondary  featuredList__title">
+          <h3 class="title--secondary featuredList__title">
             UX & FE Audits
           </h3>
           <div class="featuredList__text">
@@ -139,7 +139,7 @@ hero_text: <div class="hero__subtitle">4 years of experience in Frontend Develop
           <div class="featuredList__icon featuredList__icon--default">
             <span class="icon icon__communication"></span>
           </div>
-          <h3 class="title--secondary  featuredList__title">
+          <h3 class="title--secondary featuredList__title">
             Public Speaking
           </h3>
           <div class="featuredList__text">
@@ -152,7 +152,7 @@ hero_text: <div class="hero__subtitle">4 years of experience in Frontend Develop
           <div class="featuredList__icon featuredList__icon--default">
             <span class="icon icon__social--email"></span>
           </div>
-          <h3 class="title--secondary  featuredList__title">
+          <h3 class="title--secondary featuredList__title">
             Project Management
           </h3>
           <div class="featuredList__text">
@@ -207,65 +207,125 @@ hero_text: <div class="hero__subtitle">4 years of experience in Frontend Develop
     <div class="glide__track" data-glide-el="track">
       <div class="glide__slides featuredList__items">
         <article class="featuredList__item glide__slide">
-          <div class="featuredList__icon featuredList__icon--default">
-            <span class="icon icon icon__brand--magento"></span>
-          </div>
-          <div class="featuredList__text">
-            "Adrian was an amazing part of the PWA Studio product at
-            Magento/Adobe starting in 2018. As one of the early developers, he
-            helped shape key PWA experiences around search, navigation and other
-            areas that were important for the project and team – all part of the
-            next-generation PWA storefront experience of Magento. His attention
-            to detail from both a design and technical perspective was widely
-            known and respected as one of the top contributors. Beyond his work,
-            he was always open to feedback and his positive attitude helped
-            bring other contributors in the process. There will always be a
-            place for him in the Magento/Adobe community."
-            <br /><br />
-            <strong>
-              - Eric Erway <br />
-              <small>
-                (Sr. Manager, Product Management at Magento, an Adobe Company)
-              </small>
-            </strong>
+          <div class="featuredList__wrapper">
+            <div class="featuredList__icon featuredList__icon--default">
+              <span class="icon icon icon__brand--magento"></span>
+            </div>
+            <div class="featuredList__text">
+              "Adrian was an amazing part of the PWA Studio product at
+              Magento/Adobe starting in 2018. His attention to detail from both
+              a design and technical perspective was widely known and respected
+              as one of the top contributors. Beyond his work, he was always
+              open to feedback and his positive attitude helped bring other
+              contributors in the process. There will always be a place for him
+              in the Magento/Adobe community."
+              <br /><br />
+              <strong>
+                - Eric Erway <br />
+                <small>
+                  (Sr. Manager, Product Management at Magento, an Adobe Company)
+                </small>
+              </strong>
+            </div>
           </div>
         </article>
         <article class="featuredList__item glide__slide">
-          <div class="featuredList__icon featuredList__icon--default">
-            <span class="icon icon icon icon__communication"></span>
+          <div class="featuredList__wrapper">
+            <div class="featuredList__icon featuredList__icon--default">
+              <span class="icon icon icon icon__communication"></span>
+            </div>
+            <div class="featuredList__text">
+              "Adrian is a talented developer who really has a way of really
+              connecting with his clients whilst maintaining professionality at
+              all times. Although Adrian worked intermittently on our Zee & Co
+              project, he always showed consideration and thought before
+              completing any tasks, and always finished before the deadline was
+              due. With fantastic communication and first-class understanding, I
+              have no problem recommending Adrian and wish him the best of luck
+              in the future." <br /><br />
+              <strong>
+                - Joann Johnstone <br /><small
+                  >(Operations Director at Zee & Co Ltd)</small
+                >
+              </strong>
+            </div>
           </div>
-          <div class="featuredList__text">
-            "Adrian is a talented developer who really has a way of really
-            connecting with his clients whilst maintaining professionality at
-            all times. Although Adrian worked intermittently on our Zee & Co
-            project, he always showed consideration and thought before
-            completing any tasks, and always finished before the deadline was
-            due. With fantastic communication and first-class understanding, I
-            have no problem recommending Adrian and wish him the best of luck in
-            the future." <br /><br />
-            <strong>
-              - Joann Johnstone <br /><small
-                >(Operations Director at Zee & Co Ltd)</small
-              >
-            </strong>
+        </article>
+        <article class="featuredList__item glide__slide">
+          <div class="featuredList__wrapper">
+            <div class="featuredList__icon featuredList__icon--default">
+              <span class="icon icon icon icon__communication"></span>
+            </div>
+            <div class="featuredList__text">
+              I work with Adrian for nearly 8 months now. Adrian really knows
+              his job he makes sure to give his best in anything that he does
+              which proves his passion for coding and his innovative thinking.
+              He indeed is a very pleasant guy and it was always a pleasure
+              working with him. He did an excellent job and I can highly
+              recommend Adrian, both for his technical skills and his
+              commitment! <br /><br />
+              <strong>
+                - Bhumi Kalaria <br /><small
+                  >(Product Owner at Uptodate ventures)</small
+                >
+              </strong>
+            </div>
+          </div>
+        </article>
+        <article class="featuredList__item glide__slide">
+          <div class="featuredList__wrapper">
+            <div class="featuredList__icon featuredList__icon--default">
+              <span class="icon icon icon icon__communication"></span>
+            </div>
+            <div class="featuredList__text">
+              Adrian is one of the most complete frontend developer that I've
+              been working with. When I say "complete", that actually means that
+              he is an expert on developing user interfaces together with the
+              engineering part. Based on his knowledge, past experience and
+              inner motivation to build something that is usable and accessible
+              he will make sure that your product meets highest standards when
+              it comes to the user experience. <br /><br />
+              <strong>
+                - Danijel Vincijanovic <br /><small
+                  >(Fullstack developer at Contractbook)</small
+                >
+              </strong>
+            </div>
           </div>
         </article>
       </div>
     </div>
-    <div class="featuredList__controls" data-glide-el="controls[nav]">
+    <div
+      class="featuredList__controls featuredList__controls--single"
+      data-glide-el="controls[nav]"
+    >
       <button
         aria-label="Slide 1"
-        class="button glide__bullet featuredList__bullet"
+        class="button glide__bullet"
         data-glide-dir="=0"
       >
         <span class="visuallyHidden">Slide 1</span>
       </button>
       <button
         aria-label="Slide 2"
-        class="button glide__bullet featuredList__bullet"
+        class="button glide__bullet"
         data-glide-dir="=1"
       >
         <span class="visuallyHidden">Slide 2</span>
+      </button>
+      <button
+        aria-label="Slide 3"
+        class="button glide__bullet"
+        data-glide-dir="=2"
+      >
+        <span class="visuallyHidden">Slide 3</span>
+      </button>
+      <button
+        aria-label="Slide 4"
+        class="button glide__bullet"
+        data-glide-dir="=3"
+      >
+        <span class="visuallyHidden">Slide 4</span>
       </button>
     </div>
   </section>
@@ -282,32 +342,22 @@ hero_text: <div class="hero__subtitle">4 years of experience in Frontend Develop
     breakpoints: {
       568: {
         touchRatio: 0.5,
-        perView: 1
+        perView: 1,
       },
       1140: {
         touchRatio: 0.5,
-        perView: 2
-      }
-    }
+        perView: 2,
+      },
+    },
   };
 
   var jsTestimonialsOptions = {
-    type: "slider",
     bound: true,
     rewind: false,
-    touchRatio: 0,
+    touchRatio: 1,
+    type: "slider",
+    perView: 1,
     gap: 0,
-    perView: 2,
-    breakpoints: {
-      568: {
-        touchRatio: 0.5,
-        perView: 1
-      },
-      1140: {
-        touchRatio: 0.5,
-        perView: 2
-      }
-    }
   };
 
   var jsSkill1 = new Glide("#js-skills-1", jsSkillsOptions).mount();
