--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@ hero_text:
     <li>Magento 2 certified</li>
     <li>Distinguished author</li>
     </ul>
-    <div><a class="button button--cta" href="/contact/">Contact Me</a></div>
+    <div>            <a
+    class="button button--withIcon button--cta"
+    target="_blank"
+    href="https://www.buymeacoffee.com/ubnZ8GgDJ"
+    >
+    <span class="button__text">
+    Support my work
+    </span>
+    <img
+    src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg"
+    alt="Buy me a coffee"
+    /></a></div>
 ---
 
 <section class="container--alt banner banner--center">
