--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ hero_image: https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:eco/v154617
 hero_image_fallback: https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:eco/v1546171888/devstar/hero-homepage.png
 hero_text:
     <ul class="hero__subtitle hero__subtitle--list hero__subtitle--spacing">
-    <li>Full-stack tech lead</li>
+    <li>Full-stack developer</li>
     <li>Award-winning developer</li>
     <li>Magento 2 certified</li>
     <li>Distinguished author</li>
