--- a/skills/index.html
+++ b/skills/index.html
@@ -20,30 +20,15 @@ hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writi
             <div class="glide__slides featuredList__items">
                 <article class="featuredList__item glide__slide">
                     <div class="featuredList__icon featuredList__icon--default">
-                        <span class="icon icon__brand--magento"></span>
+                        <span class="icon icon__brand--react"></span>
                     </div>
                     <h3 class="title--secondary featuredList__title">
-                        eCommerce Development
+                        React Development
                     </h3>
                     <div class="featuredList__text">
-                        I've been working on development and maintenance of
-                        multiple Magento and Magento 2 projects for the last 3
-                        years ranging from small-scale websites to multi-store
-                        enterprise websites.
-                    </div>
-                </article>
-                <article class="featuredList__item glide__slide">
-                    <div class="featuredList__icon featuredList__icon--default">
-                        <span class="icon icon__brand--html5"></span>
-                    </div>
-                    <h3 class="title--secondary featuredList__title">
-                        Static Website Development
-                    </h3>
-                    <div class="featuredList__text">
-                        I am profficient with using Jekyll for static website
-                        development, alongsite with Gatsby for React-powered
-                        static websites. I also focus on performance and
-                        frontend optimization to achieve high Lighthouse scores.
+                        I've created several small-scale web apps using React as
+                        part of personal projects. I'm also a code contributor
+                        for Magento PWA Studio, which is also built with React.
                     </div>
                 </article>
                 <article class="featuredList__item glide__slide">
@@ -62,15 +47,30 @@ hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writi
                 </article>
                 <article class="featuredList__item glide__slide">
                     <div class="featuredList__icon featuredList__icon--default">
-                        <span class="icon icon__brand--react"></span>
+                        <span class="icon icon__brand--firebase"></span>
                     </div>
                     <h3 class="title--secondary featuredList__title">
-                        React Development
+                        Firebase backend
                     </h3>
                     <div class="featuredList__text">
-                        I've created several small-scale web apps using React as
-                        part of personal projects. I'm also a code contributor
-                        for Magento PWA Studio, which is also built with React.
+                        I am profficient with using Firebase, Firestore,
+                        Firebase Hosting and Firebase Cloud Functions. I am
+                        competent at implementing backend funtionalities,
+                        database structure, security features and hosting.
+                    </div>
+                </article>
+                <article class="featuredList__item glide__slide">
+                    <div class="featuredList__icon featuredList__icon--default">
+                        <span class="icon icon__brand--magento"></span>
+                    </div>
+                    <h3 class="title--secondary featuredList__title">
+                        eCommerce Development
+                    </h3>
+                    <div class="featuredList__text">
+                        As a certified Magento developer, I've been working on
+                        development and maintenance of multiple Magento and
+                        Magento 2 projects ranging from small-scale websites to
+                        multi-store enterprise websites.
                     </div>
                 </article>
             </div>
@@ -119,25 +119,25 @@ hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writi
                         <span class="icon icon__file"></span>
                     </div>
                     <h3 class="title--secondary featuredList__title">
-                        UX & FE Audits
+                        Professional Writing
                     </h3>
                     <div class="featuredList__text">
-                        I have experience in analyzing the websites from
-                        technical aspect and UX aspect. I am also proficient in
-                        writing detailed reports addressing critical issues and
-                        providing solution suggestions.
+                        I wrote over 30 articles on various web development
+                        topics for various high-profile publications like
+                        Smashing Magazine, CSS-Tricks and LogRocket. I was also
+                        recognized as an distinguished author on DEV in 2019.
                     </div>
                 </article>
                 <article class="featuredList__item glide__slide">
                     <div class="featuredList__icon featuredList__icon--default">
-                        <span class="icon icon__brand--adobecc"></span>
+                        <span class="icon icon__paint"></span>
                     </div>
                     <h3 class="title--secondary featuredList__title">Design</h3>
                     <div class="featuredList__text">
                         As a frontend developer, I am also profficient in web
-                        design. I use Adobe XD to create both page mockups and
-                        full designs. I also use user-monitor tools to detect
-                        bottlenecks and areas of improvement.
+                        design. I use Adobe XD and Figma to create both page
+                        mockups and full designs. I also use user-monitor tools
+                        to detect bottlenecks and areas of improvement.
                     </div>
                 </article>
                 <article class="featuredList__item glide__slide">
@@ -148,10 +148,11 @@ hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writi
                         Public Speaking
                     </h3>
                     <div class="featuredList__text">
-                        I have attended several Meet Magento events and gave a
-                        presentation at Meet Magento 2018 Poland. I also gave
-                        presentations on several online demos for Magento
-                        Community Engineering Youtube Channel.
+                        I have attended several Meet Magento events, We Are
+                        Developers events and gave a presentation at Meet
+                        Magento 2018 Poland. I also gave presentations on
+                        several online demos for Magento Community Engineering
+                        Youtube Channel.
                     </div>
                 </article>
                 <article class="featuredList__item glide__slide">
@@ -209,7 +210,10 @@ hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writi
             </h2>
         </article>
     </section>
-    <section class="featuredList glide" id="js-skills-3">
+    <section
+        class="featuredList featuredList--fullWidth glide"
+        id="js-skills-3"
+    >
         <div class="glide__track" data-glide-el="track">
             <div class="glide__slides featuredList__items">
                 <article class="featuredList__item glide__slide">
