--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@ hero_text:
     <li>Magento 2 certified</li>
     <li>Distinguished author</li>
     </ul>
-    <div>            <a
+    <div>
+    <a
     class="button button--withIcon button--cta"
     target="_blank"
+    rel="noopener noreferrer"
     href="https://www.buymeacoffee.com/ubnZ8GgDJ"
     >
     <span class="button__text">
@@ -24,7 +26,8 @@ hero_text:
     class="lazyload"
     loading="lazy"
     src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:low/v1546683551/devstar/placeholder.png"
-    data-src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg"
+    data-src="/assets/bmc-new-btn-logo.svg"
+    alt="Buy me a coffee logo icon coffee cup"
     /></a></div>
 ---
 
