--- a/skills/index.html
+++ b/skills/index.html
@@ -394,7 +394,9 @@ hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writi
         gap: 0,
     };
 
-    var jsSkill1 = new Glide("#js-skills-1", jsSkillsOptions).mount();
-    var jsSkill2 = new Glide("#js-skills-2", jsSkillsOptions).mount();
-    var jsSkill2 = new Glide("#js-skills-3", jsTestimonialsOptions).mount();
+    setTimeout(function () {
+        var jsSkill1 = new Glide("#js-skills-1", jsSkillsOptions).mount();
+        var jsSkill2 = new Glide("#js-skills-2", jsSkillsOptions).mount();
+        var jsSkill2 = new Glide("#js-skills-3", jsTestimonialsOptions).mount();
+    }, 100);
 </script>
