--- a/skills/index.html
+++ b/skills/index.html
@@ -364,7 +364,7 @@ hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writi
         </div>
     </section>
 </main>
-
+{% include glide.html %}
 <script>
     var jsSkillsOptions = {
         type: "slider",
