--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@ hero_text:
                     Magento-certified Developer
                 </h3>
                 <div class="featuredList__text">
-                    I've been working on development and maintenance of multiple
-                    Magento and Magento 2 projects ranging from small-scale
-                    websites to multi-store enterprise websites.
+                    I have developed and maintained multiple Magento and Magento
+                    2 projects ranging from small-scale websites to multi-store
+                    enterprise websites. I'm also certified Magento 1 and
+                    Magento 2 developer.
                 </div>
             </article>
         </div>
